# catalogo-dnd

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build.yml
2014/: index.html
2024/: index.html
data/products/01_books/02_supplemental_rules/: 001_vgm.json  004_ai.json  008_bpgg.json
data/products/01_books/04_adventures/: 001_hotdq.json  008_toa.json  015_cm.json  019_dsotdq.json  020_kftgv.json  021_pabtso.json  022_veor.json
data/products/02_boxed_sets/01_starter_sets/: 002_hftt.json
data/products/02_boxed_sets/02_adventure_settings/: 002_tofw.json
data/products/02_boxed_sets/03_others/: 001_bmt.json
data/products/books/: 001_phb.json  002_mm.json  003_dmg.json
data/products/books/adventures/: 001_hotdq.json  002_rot.json  003_pota.json  004_oota.json  005_cos.json  006_skt.json  007_totwp.json  008_toa.json  009_wdh.json  010_wdmm.json  011_gos.json  012_tod.json  013_bgdia.json  014_idrotf.json  015_cm.json  016_wbtw.json  017_crcotn.json  018_jttrc.json  019_dsotdq.json  020_kftgv.json  021_pabtso.json
data/products/books/core_rules/: 001_phb.json  002_mm.json  003_dmg.json
data/products/books/settings/: 001_scag.json  002_ggr.json  003_erlw.json  004_egw.json  005_mot.json  006_vrgr.json  007_scc.json
data/products/books/supplemental_rules/: 001_vgm.json  002_xge.json  003_mtf.json  004_ai.json  005_tce.json  006_ftd.json  007_mpmm.json  008_bpgg.json
data/products/boxed_sets/: 001_lmop.json
data/products/boxed_sets/starter_sets/: 001_lmop.json  002_dip.json  002_hftt.json  003_dip.json  (+4 more)
data/schemas/: product.jsonschema
data/templates/: product.html.jinja
macros/: __init__.py  main.py  publications.py  publications_fifth.py  publications_new.py  utils.py
search/: search_index.json
src/: 2014.md  2024.md  index.md
src/stylesheets/: extra.css
stylesheets/: extra.css
(+31 files in other folders)
