[tool.poetry]
name = "catalogo-dnd"
version = "0.1.0"
description = "Catálogo de productos de Dungeons & Dragons 5ª edición"
authors = ["logoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.7"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-glightbox = "^0.3.7"
babel = "^2.14.0"
jsonschema = "^4.21.1"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']