[tool.poetry]
name = "catalogo-dnd"
version = "0.1.0"
description = "Catálogo de productos de Dungeons & Dragons 5ª edición"
authors = ["logoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-glightbox = "^0.4.0"
babel = "^2.16.0"
jsonschema = "^4.23.0"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']